# Supremum

./: .gitignore  README.md  README.zh-CN.md  TAURI_2_MIGRATION_PLAN.md  index.html  package-lock.json  package.json  vite.config.ts
mini-terminal/: README.md  package.json
mini-terminal-editor/: .gitignore  BUN_MIGRATION.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
mini-terminal-editor/src/: AllDiffsView.tsx  ChangesPanel.tsx  CodeEditor.tsx  DiffEditor.tsx  EditorPanel.tsx  FileTree.tsx  GitBranchRefsPanel.tsx  GitCommitGraphPanel.tsx  MainLayout.tsx  Terminal.tsx  WorkspaceContext.tsx  WorkspaceGate.tsx  agentPresets.ts  fileTreeDnd.ts  fileTreeTypes.ts  gitApi.ts  gitTypes.ts  index.css  useGitBranchRefs.ts  useGitChanges.ts  useGitCommitGraph.ts
mini-terminal-editor/src-tauri/: Cargo.toml  tauri.conf.json
mini-terminal-editor/src-tauri/capabilities/: default.json
mini-terminal-editor/src-tauri/src/: git_backend.rs  lib.rs
mini-terminal/src/: App.tsx
mini-terminal/src-tauri/: tauri.conf.json
mini-terminal/src-tauri/src/: main.rs
src/: App.tsx  CodeEditor.tsx  MainLayout.tsx  Terminal.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/editors/: CodeEditorPanel.tsx
src/components/git/: ChangesPanel.tsx  DiffPanel.tsx
src/components/layout/: AppShell.tsx  PaneTabsBar.tsx  TopTabsBar.tsx  WorkspaceSidebar.tsx
src/components/terminal/: TerminalPanel.tsx
src/lib/mock-data/: workbench.ts
src/styles/: global.css
