[package]
name = "nextterm"
version = "0.1.0"
description = "NextTerm desktop shell"
authors = ["htcmax"]
edition = "2021"

[lib]
name = "nextterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
