[package]
name = "subset"
version = "0.1.0"
description = "Minimal Tauri xterm terminal app"
authors = ["htcmax"]
edition = "2021"

[lib]
name = "mini_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Subset"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
base64 = "0.22"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
raw-window-handle = "0.6"
